added a google font

--- a/frontend/html/profile.html
+++ b/frontend/html/profile.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 </head>
 
 <body>
@@ -51,8 +53,7 @@
             <div class="most_liked">
                 <h2>Liked recipes</h2>
                 <div class="recipecard"></div>
-                <div class="recipecard"></div>
-                <div class="recipecard"></div>
+                
             </div>
         </div>
 
