--- a/frontend/html/addrecipe.html
+++ b/frontend/html/addrecipe.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Make a recipe</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 </head>
 
 <body class="recipeaddbody">
