--- a/frontend/html/profile.html
+++ b/frontend/html/profile.html
@@ -38,21 +38,17 @@
     </nav>
     <div class="profile_container">
         <div class="profilename">
-            <h1>username</h1>
+            <h1 id="username"></h1>
         </div>
 
         <div class="profile_content">
         
-            <div class="own_recipes">
+            <div class="own_recipes" id="info">
                 <h2>Own recipes</h2>
-                <div class="recipecard"></div>
-                <div class="recipecard"></div>
-                <div class="recipecard"></div>
             </div>
 
-            <div class="most_liked">
+            <div class="most_liked" id="infoliked">
                 <h2>Liked recipes</h2>
-                <div class="recipecard"></div>
                 
             </div>
         </div>
@@ -61,5 +57,6 @@
     </div>
 
 </body>
-
+<script src="../js/logout.js"></script>
+<script src="../js/profilePage.js"></script>
 </html>
