--- a/frontend/html/addrecipe.html
+++ b/frontend/html/addrecipe.html
@@ -51,9 +51,9 @@
                     <h2>Name</h2>
                     <textarea name="name" id="textarea">asd</textarea>
                 </div>
-                <div class="add_id">
+                <div id="add_id" class="add_id">
                     <h2>ID</h2>
-                    <textarea name="userid" id="textarea">asd</textarea>
+                    <textarea name="userid" id="textarea" class="userIdText"></textarea>
                 </div>
                 <div class="add_ingredients">
                     <h2>Add ingredients</h2>
