--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -46,7 +46,7 @@
     <h1 id="name"></h1>
     <div class="image_container">
         <div id="image_container">
-            <img src="../mockupPhoto/glögg.png">
+            <img id="foodImage" src="">
             <div class="likebutton_container">
                 <button class="likebutton" id="likebutton"><i id="heart" class="fa fa-heart-o"
                         aria-hidden="true"></i></button>
