most of page stuff done just need some breakpints

--- a/frontend/html/signup.html
+++ b/frontend/html/signup.html
@@ -52,7 +52,7 @@
                 <input type="Password" name="password" required>
             </div>
             <div class="loginbutton">
-                <input type="submit" value="Proceed">
+                <input class="login_button"type="submit" value="Proceed">
 
             </div>
         </form>
