--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -9,8 +9,7 @@
     <title>Recipes</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto+Slab">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 </head>
 
 <nav>
@@ -39,9 +38,6 @@
     </ul>
 </nav>
 
-
-</ul>
-</nav>
 <div class="container">
     <h1 id="name"></h1>
     <div class="image_container">
@@ -65,19 +61,18 @@
         </div>
     </div>
     <div id="commentfield" class="commentfield">
-
-
-
     </div>
-
-        <form class="addcomment">
-            <textarea id="commentBox" class="comment_area"></textarea>
-            <button id="add_comment_button">Add comment</button>
-        </form>
+    <div class="addcommentfield">
+    <form class="addcomment">
+        <textarea id="commentBox" class="comment_area"></textarea>
+        <button class="submit_button" id="add_comment_button">Add comment</button>
+    </form>
+</div>
 </div>
 
 
 </body>
 <script src="../js/recipes.js"></script>
 <script src="../js/logout.js"></script>
+
 </html>
