--- a/frontend/html/profile.html
+++ b/frontend/html/profile.html
@@ -22,7 +22,7 @@
                         style="max-width: 3em; max-height: 3em; border-radius: 50%;">
                     <div class="dropdown">
                         <div class="dropdown-content">
-                            <a href="login.html" id="dropdown_login">Log In</a>
+                            <a href="login.html" id="dropdown_login" class="dropdownlink">Log In</a>
                             <a href="profile.html" id="dropdown_profile">Profile</a>
                             <a href="addrecipe.html" id="dropdown_addrecipe">Make a recipe</a>
                             <a href="loggedout.html" id="dropdown_logout" onclick="logout()">Log Out</a>
