--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -61,7 +61,10 @@
         </div>
     </div>
     <div id="commentfield" class="commentfield">
-        
+        <div class="comment"></div>
+        <div class="comment"></div>
+        <div class="comment"></div>
+        <div class="comment"></div>
     </div>
     <div class="addcommentfield">
     <form class="addcomment">
