--- a/frontend/html/addrecipe.html
+++ b/frontend/html/addrecipe.html
@@ -57,11 +57,11 @@
                 </div>
                 <div class="add_ingredients">
                     <h2>Add ingredients</h2>
-                    <textarea class="ingredients_input" name="ingredients" id="textarea">asd</textarea>
+                    <textarea class="ingredients_input" name="ingredients" id="textarea"></textarea>
                 </div>
                 <div class="add_steps">
                     <h2>Add steps</h2>
-                    <textarea class="steps_input" name="instructions" id="textarea">dsa</textarea>
+                    <textarea class="steps_input" name="instructions" id="textarea"></textarea>
                 </div>
             </div>
             <div class="add_button">
