--- a/frontend/html/recipes.html
+++ b/frontend/html/recipes.html
@@ -68,7 +68,7 @@
         <button class="submit_button" id="add_comment_button">Add comment</button>
     </form>
 </div>
-<button>Delete</button>
+<button id="Delete">Delete</button>
 </div>
 
 
